# BuildCalc

./: .gitignore  CMakeLists.txt  README.md
android/: AndroidManifest.xml  build.gradle
android/res/xml/: qtprovider_paths.xml
qml/: Main.qml
qml/components/: CalculatorTile.qml  MetricField.qml  SegmentedControl.qml
src/: calculatorengine.cpp  calculatorengine.h  main.cpp
